Added Gazebo and start of ROS

--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -1,4 +1,4 @@
-\FloatBarrier\section{LQR} \label{sec:lqr}
+\FloatBarrier\section{Linear Quadratic Regulator} \label{sec:lqr}
 
         \paragraph
         \gls{LQR} is a popular optimal control technique and has been shown to be an effective swing-damping controller for multirotors with a suspended payload 
