--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -1,4 +1,4 @@
-\FloatBarrier\section{MPC} \label{sec:mpc}
+\FloatBarrier\section{Model Predictive Control} \label{sec:mpc}
 
     \paragraph
     \acrfull{MPC} refers to a control system approach that determines the control action at each time-step 
