--- a/glossary.tex
+++ b/glossary.tex
@@ -69,6 +69,7 @@
 \newacronym{ESL}{ESL}{Electronic System Laboratory}
 \newacronym{PWM}{PWM}{Pulse-Width Modulation}
 \newacronym{RC}{RC}{Radio Control}
+\newacronym{QGC}{QGC}{QGroundControl}
 
 \newacronym{ZV}{ZV}{Zero Vibration}
 \newacronym{NZV}{NZV}{Negative Zero Vibration}
