--- a/results/results.tex
+++ b/results/results.tex
@@ -440,7 +440,7 @@
             % Because the model prediction matches the practical testing data so closely,
             % it is expected that this model will 
             
-    \FloatBarrier\section{HITL}
+    \FloatBarrier\section{Hardware-in-the-Loop simulations}
 
         \paragraph
         In Section~\ref{sec:data_driven_sys_id_prac} it was shown that \gls{DMDc} can generate accurate state prediction models from practical flight data.
