Added mavros mpc node illustration

--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -166,7 +166,7 @@
         The Simulink implementation of an \gls{MPC} from the Model Predictive Control Toolbox\texttrademark~ \cite{MPCtoolbox2019} was selected for this work. 
         It was selected because it integrates well with our simulation environment in Simulink
         and it specifically uses a discrete state-space plant model.
-        The Model Predictive Control Toolbox\texttrademark~ also supports C++ code generation for stand-alone ROS nodes.
+        The Model Predictive Control Toolbox\texttrademark~ also supports C\texttt{++} code generation for stand-alone \gls{ROS} nodes.
         Therefore, it can integrate with the SITL implementation of PX4 and it can be run on an \gls{OBC} for practical implementations.
 
         % ?? Check all Simulink without TM
