--- a/control/simulation_environment.tex
+++ b/control/simulation_environment.tex
@@ -4,7 +4,7 @@
     The controllers in this chapter are tested with a MATLAB/Simulink simulation environment.
     This is used rather than the SITL and Gazebo simulation environment because it allows us to iterate designs faster.
     Simulink provides a graphical interface for control system design which enables us to change the control system design with ease.
-    In contrast, the SITL and Gazebo simulation environment requires text-based control laws with C\texttt{++} and requires ROS nodes to interface an \gls{MPC} with PX4.
+    In contrast, the SITL and Gazebo simulation environment requires text-based control laws with C\texttt{++} and requires \gls{ROS} nodes to interface an \gls{MPC} with PX4.
     This requires a lot more development time for control system design than the graphical tools in Simulink.
     The SITL and Gazebo simulation also has a longer runtime per simulation, which further adds to the development time of the iterative control system design process.
     
