--- a/glossary.tex
+++ b/glossary.tex
@@ -47,6 +47,7 @@
 \newacronym{SITL}{SITL}{Software-in-the-Loop}
 \newacronym{HITL}{HITL}{Hardware-in-the-Loop}
 \newacronym{ROS}{ROS}{Robot Operating System}
+\newacronym{UDP}{UDP}{User Datagram Protocol}
 
 \newacronym{LPF}{LPF}{Low Pass Filter}
 \newacronym{LQG}{LQG}{Linear Quadratic Gaussian}
